Reduje tamaño de enlaces en nav y destaque h1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Portafolio Personal | Brenda Romero</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
+    rel="stylesheet">
 </head>
 
 <body>
@@ -45,14 +49,15 @@
                 </p>
 
                 <ul class="sobre-mi__lista-pilares">
-                    <li><i class="fas fa-search-plus"></i>Obsesión por el Detalle: No es solo que
+                    <li><i class="fas fa-search-plus"></i><span>Obsesión por el Detalle:</span> No es solo que
                         funcione, es que se vea y se sienta bien. La precisión visual y la coherencia del diseño
                         son
                         mi punto de partida.</li>
-                    <li><i class="fas fa-brain"></i>Mentalidad Estructurada y Detallista: Mi formación
+                    <li><i class="fas fa-brain"></i><span>Mentalidad Estructurada y Detallista:</span> Mi formación
                         dota de un pensamiento lógico y eficiente. Busco soluciones limpias y elegantes
                         desde el inicio.</li>
-                    <li><i class="fas fa-rocket"></i>Perfeccionamiento Continuo: Estoy en constante búsqueda de
+                    <li><i class="fas fa-rocket"></i><span>Perfeccionamiento Continuo:</span> Estoy en constante
+                        búsqueda de
                         nuevos métodos. Me intriga ir más allá del código funcional para dejar una marca.</li>
                 </ul>
 
@@ -179,7 +184,7 @@
     <footer class="pie-pagina">
         <nav class="menu__pie">
             <ul class="menu__lista">
-                <li><a href="#sobre-mi" class="menu__enlace">HOLA</a></li>
+                <li><a href="#sobre-mi" class="menu__enlace">SOBRE MI</a></li>
                 <li><a href="#conocimientos" class="menu__enlace">CONOCIMIENTOS</a></li>
                 <li><a href="#proyectos" class="menu__enlace">PROYECTOS</a></li>
                 <li><a href="#contacto" class="menu__enlace">CONTACTO</a></li>
