Acomode horizontalmente el menu del footer en responsive

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
-    rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -49,21 +50,41 @@
                 </p>
 
                 <ul class="sobre-mi__lista-pilares">
-                    <li><i class="fas fa-search-plus"></i><span>Obsesión por el Detalle:</span> No es solo que
-                        funcione, es que se vea y se sienta bien. La precisión visual y la coherencia del diseño
-                        son
-                        mi punto de partida.</li>
-                    <li><i class="fas fa-brain"></i><span>Mentalidad Estructurada y Detallista:</span> Mi formación
-                        dota de un pensamiento lógico y eficiente. Busco soluciones limpias y elegantes
-                        desde el inicio.</li>
-                    <li><i class="fas fa-rocket"></i><span>Perfeccionamiento Continuo:</span> Estoy en constante
-                        búsqueda de
-                        nuevos métodos. Me intriga ir más allá del código funcional para dejar una marca.</li>
+                    <li>
+                        <i class="fas fa-search-plus"></i>
+                        <div class="pilar__contenido">
+                            <p>
+                                <span class="pilar__titulo">Obsesión por el Detalle:</span>
+                                No es solo que funcione, es que se vea y se sienta bien. La precisión visual y la
+                                coherencia del diseño son mi punto de partida.
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-brain"></i>
+                        <div class="pilar__contenido">
+                            <p>
+                                <span class="pilar__titulo">Mentalidad Estructurada y Detallista:</span>
+                                Mi formación dota de un pensamiento lógico y eficiente. Busco soluciones limpias y
+                                elegantes desde el inicio.
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-rocket"></i>
+                        <div class="pilar__contenido">
+                            <p>
+                                <span class="pilar__titulo">Perfeccionamiento Continuo:</span>
+                                Estoy en constante búsqueda de nuevos métodos. Me intriga ir más allá del código
+                                funcional para dejar una marca.
+                            </p>
+                        </div>
+                    </li>
                 </ul>
 
                 <p class="seccion__parrafo-final">
                     Estoy lista para contribuir a proyectos donde la calidad y experiencia visual son
-                    prioridades. Si buscas a alguien con determinación, pasión y un ojo para el detalle, hablemos!.
+                    prioridades. Si buscas a alguien con determinación, pasión y un ojo para el detalle, hablemos!
                 </p>
             </div>
 
@@ -134,7 +155,9 @@
             <div class="contacto__contenedor">
                 <div class="contacto__info">
                     <h2 class="contacto__titulo">CONTACTAME</h2>
-                    <p>Estoy disponible para nuevos proyectos y oportunidades laborales. ¡Hablemos!</p>
+                    <p>Estoy disponible para nuevos proyectos y oportunidades laborales.
+                        <span>¡Hablemos!</span>
+                    </p>
                     <address class="contacto__redes">
                         <a href="https://wa.me/XXXXXXXXXX" target="_blank" class="redes__item">
                             <i class="fab fa-whatsapp"></i>
@@ -182,6 +205,7 @@
     </main>
 
     <footer class="pie-pagina">
+        <div class="pie__contenido-wrapper"> <nav class="menu__pie"></nav>
         <nav class="menu__pie">
             <ul class="menu__lista">
                 <li><a href="#sobre-mi" class="menu__enlace">SOBRE MI</a></li>
@@ -198,6 +222,7 @@
         </div>
 
         <p class="pie__copyright">Hecho con ❤️ por Brenda Romero</p>
+        </div>
     </footer>
 
 </body>
