Ajuste en gama de tonos

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <h2 class="seccion__titulo">Mi Viaje en el Desarrollo</h2>
 
                 <p class="seccion__parrafo-inicial">
-                    Soy Brenda, y mi entrada al mundo del código se ha convertido en una pasión por la creación. Si
-                    bien mi viaje está en sus etapas iniciales, mi enfoque es: la busqueda constante de
-                    aprender, perfeccionar y aplicar las mejores prácticas. Cada proyecto es una
+                    Soy <span>Brenda</span>, y mi entrada al mundo del código se ha convertido en una <span>pasión por la creación</span>.
+                    Si bien mi viaje está en sus etapas iniciales, mi enfoque es: la <span>busqueda constante de
+                    aprender, perfeccionar y aplicar las mejores prácticas</span>. Cada proyecto es una
                     oportunidad para elevar la calidad.
                 </p>
 
@@ -55,8 +55,8 @@
                         <div class="pilar__contenido">
                             <p>
                                 <span class="pilar__titulo">Obsesión por el Detalle:</span>
-                                No es solo que funcione, es que se vea y se sienta bien. La precisión visual y la
-                                coherencia del diseño son mi punto de partida.
+                                No es solo que funcione, es que se vea y se sienta bien. La <span>precisión visual</span> y la
+                                <span>coherencia del diseño</span> son mi punto de partida.
                             </p>
                         </div>
                     </li>
@@ -65,7 +65,7 @@
                         <div class="pilar__contenido">
                             <p>
                                 <span class="pilar__titulo">Mentalidad Estructurada y Detallista:</span>
-                                Mi formación dota de un pensamiento lógico y eficiente. Busco soluciones limpias y
+                                Mi formación dota de un <span>pensamiento lógico y eficiente</span>. Busco soluciones limpias y
                                 elegantes desde el inicio.
                             </p>
                         </div>
@@ -84,7 +84,7 @@
 
                 <p class="seccion__parrafo-final">
                     Estoy lista para contribuir a proyectos donde la calidad y experiencia visual son
-                    prioridades. Si buscas a alguien con determinación, pasión y un ojo para el detalle, hablemos!
+                    prioridades. Si buscas a alguien con determinación, pasión y un ojo para el detalle, <span>hablemos!</span>
                 </p>
             </div>
 
@@ -95,7 +95,7 @@
 
         <section id="conocimientos" class="seccion conocimientos">
             <h2 class="seccion__titulo">Mis conocimientos</h2>
-            <p class="seccion__subtitulo">Aquí tienes una lista de las tecnologías y herramientas que manejo.</p>
+            <p class="seccion__subtitulo">Aquí tienes una lista de las tecnologías y herramientas que manejo:</p>
             <div class="conocimientos__grilla">
                 <article class="tarjeta__conocimiento">
                     <img src="img/logo-html5.jpg" alt="Logo de HTML 5">
@@ -118,7 +118,7 @@
 
         <section id="proyectos" class="seccion proyectos">
             <h2 class="seccion__titulo">Mis Proyectos</h2>
-            <p class="seccion__subtitulo">Aquí tienes una lista de mis proyectos más recientes.</p>
+            <p class="seccion__subtitulo">Aquí tienes una lista de mis proyectos más recientes:</p>
             <div class="proyectos__grilla">
 
                 <article class="proyectos__tarjeta">
