Agg icono al head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Personal | Brenda Romero</title>
+    <link rel="icon" type="image/png" href="img/favicon.ico"> 
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -122,29 +123,29 @@
             <div class="proyectos__grilla">
 
                 <article class="proyectos__tarjeta">
-                    <a href="URL_A_TU_PROYECTO_1" target="_blank" class="proyecto__enlace">
+                    <a href="proyectos/petshop/index.html" target="_blank" class="proyecto__enlace">
                         <figure class="proyecto__imagen">
-                            <img src="img/captura-proyecto-1.png" alt="Miniatura del proyecto 1: Nombre del Proyecto.">
+                            <img src="img/miniatura petshop.png" alt="Miniatura del proyecto 1: PetShop Online">
                         </figure>
-                        <h3 class="proyectos__titulo">Nombre del Proyecto 1</h3>
+                        <h3 class="proyectos__titulo">Pet Shop</h3>
                     </a>
                 </article>
 
                 <article class="proyectos__tarjeta">
-                    <a href="URL_A_TU_PROYECTO_2" target="_blank" class="proyecto__enlace">
+                    <a href="proyectos/formulario/index.html" target="_blank" class="proyecto__enlace">
                         <figure class="proyecto__imagen">
-                            <img src="img/captura-proyecto-2.png" alt="Miniatura del proyecto 2: Nombre del Proyecto.">
+                            <img src="img/miniatura form.jpeg" alt="Miniatura del proyecto 2: Formulario de Registro">
                         </figure>
-                        <h3 class="proyectos__titulo">Nombre del Proyecto 2</h3>
+                        <h3 class="proyectos__titulo">Registro de Cliente</h3>
                     </a>
                 </article>
 
                 <article class="proyectos__tarjeta">
-                    <a href="URL_A_TU_PROYECTO_3" target="_blank" class="proyecto__enlace">
+                    <a href="proyectos/card de producto/index.html" target="_blank" class="proyecto__enlace">
                         <figure class="proyecto__imagen">
-                            <img src="img/captura-proyecto-3.png" alt="Miniatura del proyecto 3: Nombre del Proyecto.">
+                            <img src="img/miniatura card.png" alt="Miniatura del proyecto 3: Card de Producto">
                         </figure>
-                        <h3 class="proyectos__titulo">Nombre del Proyecto 3</h3>
+                        <h3 class="proyectos__titulo">Tarjeta de Producto</h3>
                     </a>
                 </article>
 
